# baste

./: Cargo.toml  LICENSE  README.md
testdata/: R1.large.fastq  R2.large.fastq
